[package]
name = "midpoint-editor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = "1.19.0"
wgpu = "22.1.0"
floem = { path = "D:/projects/common/common-floem", features = ["tokio"] }
floem_renderer = { path = "D:/projects/common/common-floem/renderer", version = "0.1.0" }
crossbeam = "0.8.4"
floem-winit = { git = "https://github.com/lapce/winit", rev = "c8d3b8fd6fa4ffd5e0f99be78aacddcf6de57bcd", features = ["rwh_05"] }
im = "15.1.0"
once_cell = "1.20.2"
uuid = { version = "1.8.0", features = ["v4"] }
strum = "0.26.3"
strum_macros = "0.26"
cgmath = "0.18.0"
undo = "0.51.0"
reqwest = { version = "0.12.4", features = ["json"] }
reqwest-graphql = "1.0.0"
midpoint-engine = { path = "D:/projects/common/midpoint-engine" }
directories = "5.0.1"
image = "0.25.1"
tiff = "0.9.1"
base64 = "0.22.1"
tokio = { version = "1.39.0", features = ["full"] }
chrono = "0.4.38"
